update test.sh